--- a/src/Pages/projects.css
+++ b/src/Pages/projects.css
@@ -15,6 +15,7 @@
     border: 5px solid rgb(188, 183, 183, 0.2);
     border-radius: 5px;
     position: relative;
+    color: rgb(188, 183, 183, 1);
 }
 
 .project-section:hover {
